--- a/index.html
+++ b/index.html
@@ -6,84 +6,152 @@
     <title>Football Apparel</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
         }
         header {
-            background: #333;
+            background-color: #333;
             color: #fff;
-            padding: 10px 20px;
+            padding: 15px 0;
             text-align: center;
-        }
-        nav {
-            margin: 10px 0;
         }
         nav a {
             color: #fff;
-            margin: 0 15px;
             text-decoration: none;
+            margin: 0 20px;
+            font-size: 16px;
+        }
+        .hero {
+            background: url('hero-banner.jpg') no-repeat center center/cover;
+            height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.5rem;
         }
         .container {
-            width: 80%;
-            margin: 0 auto;
+            width: 90%;
+            margin: 20px auto;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
         }
         .product {
             background: #fff;
-            padding: 20px;
-            margin: 20px 0;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            flex: 1 1 calc(33.333% - 40px);
+            margin: 10px;
+            transition: transform 0.3s ease;
+        }
+        .product:hover {
+            transform: translateY(-10px);
         }
         .product img {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
+        }
+        .product-content {
+            padding: 15px;
+            text-align: center;
+        }
+        .product-content h2 {
+            margin: 0 0 10px;
+            font-size: 1.5rem;
+        }
+        .product-content p {
+            font-size: 1rem;
+            color: #555;
+        }
+        .cta-button {
+            display: inline-block;
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .cta-button:hover {
+            background-color: #555;
         }
         footer {
-            background: #333;
+            background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
+            padding: 15px;
+            position: relative;
             bottom: 0;
+            width: 100%;
+        }
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Football Apparel</h1>
         <nav>
+            <a href="#">Home</a>
             <a href="#visors">Visors</a>
             <a href="#sleeves">Sleeves</a>
             <a href="#gloves">Gloves</a>
         </nav>
     </header>
 
-    <div class="container">
+    <section class="hero">
+        <div>
+            <h1>Football Apparel</h1>
+            <p>Gear up with the best in football apparel</p>
+            <a href="#shop" class="cta-button">Shop Now</a>
+        </div>
+    </section>
+
+    <div class="container" id="shop">
         <section id="visors" class="product">
-            <h2>Visors</h2>
             <img src="visors.jpg" alt="Football Visors">
-            <p>High-quality visors to enhance your game performance.</p>
+            <div class="product-content">
+                <h2>Visors</h2>
+                <p>High-quality visors to enhance your game performance.</p>
+                <a href="#" class="cta-button">Learn More</a>
+            </div>
         </section>
 
         <section id="sleeves" class="product">
-            <h2>Sleeves</h2>
             <img src="sleeves.jpg" alt="Football Sleeves">
-            <p>Comfortable and stylish sleeves for all football players.</p>
+            <div class="product-content">
+                <h2>Sleeves</h2>
+                <p>Comfortable and stylish sleeves for all football players.</p>
+                <a href="#" class="cta-button">Learn More</a>
+            </div>
         </section>
 
         <section id="gloves" class="product">
-            <h2>Gloves</h2>
             <img src="gloves.jpg" alt="Football Gloves">
-            <p>Durable gloves to ensure a strong grip and protection.</p>
+            <div class="product-content">
+                <h2>Gloves</h2>
+                <p>Durable gloves to ensure a strong grip and protection.</p>
+                <a href="#" class="cta-button">Learn More</a>
+            </div>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 Football Apparel. All rights reserved.</p>
+        <p>&copy; 2024 Football Apparel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
 </body>
 </html>
