--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-size: 16px;
         }
         .hero {
-            background: url('hero-banner.jpg') no-repeat center center/cover;
+            background: url('https://raw.githubusercontent.com/aidanxworld/aidanxworld.github.io/main/White-Leg-Sleeves-Amazon-03.webp') no-repeat center center/cover;
             height: 400px;
             display: flex;
             align-items: center;
