--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
             margin: 0 20px;
             font-size: 16px;
         }
+        .logo {
+            font-size: 2.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
         .hero {
-            background: url('https://raw.githubusercontent.com/aidanxworld/aidanxworld.github.io/main/White-Leg-Sleeves-Amazon-03.webp') no-repeat center center/cover;
+            background: url('hero-banner.jpg') no-repeat center center/cover;
             height: 400px;
             display: flex;
             align-items: center;
@@ -96,6 +102,11 @@
             bottom: 0;
             width: 100%;
         }
+        footer p {
+            margin: 0;
+            font-size: 1rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
         footer a {
             color: #fff;
             text-decoration: none;
@@ -105,6 +116,7 @@
 </head>
 <body>
     <header>
+        <div class="logo">Football Apparel</div>
         <nav>
             <a href="#">Home</a>
             <a href="#visors">Visors</a>
