--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Football Apparel</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Oswald', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -30,7 +30,7 @@
             letter-spacing: 2px;
         }
         .hero {
-            background: url('hero-banner.jpg') no-repeat center center/cover;
+            background: url('1427003310.0.jpg') no-repeat center center/cover;
             height: 400px;
             display: flex;
             align-items: center;
