--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </section>
 
         <section id="sleeves" class="product">
-            <img src="sleeves.jpg" alt="Football Sleeves">
+            <img src="ccas01.png" alt="Football Sleeves">
             <div class="product-content">
                 <h2>Sleeves</h2>
                 <p>Comfortable and stylish sleeves for all football players.</p>
