--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <div class="container" id="shop">
         <section id="visors" class="product">
-            <img src="visors.jpg" alt="Football Visors">
+            <img src="61viL3K9C2L._AC_UL320_.png" alt="Football Visors">
             <div class="product-content">
                 <h2>Visors</h2>
                 <p>High-quality visors to enhance your game performance.</p>
@@ -153,7 +153,7 @@
         </section>
 
         <section id="gloves" class="product">
-            <img src="gloves.jpg" alt="Football Gloves">
+            <img src="812Z2yNrbgL._AC_UF1000,1000_QL80_.png" alt="Football Gloves">
             <div class="product-content">
                 <h2>Gloves</h2>
                 <p>Durable gloves to ensure a strong grip and protection.</p>
