--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             letter-spacing: 2px;
         }
         .hero {
-            background: url('1427003310.0.jpg') no-repeat center center/cover;
+            background: url('giphy (1).gif') no-repeat center center/cover;
             height: 400px;
             display: flex;
             align-items: center;
