--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Football Apparel</title>
     <style>
         body {
-            font-family: 'Oswald', sans-serif;
+            font-family: 'AntonSC', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
