--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Apparel</title>
+    <link href="https://github.com/username/repo/raw/main/path/to/font-file.css" rel="stylesheet">
     <style>
         body {
             font-family: 'AntonSC', sans-serif;
