--- a/signup.html
+++ b/signup.html
@@ -105,7 +105,7 @@
     <header>
         <div class="logo">Football Apparel</div>
         <nav>
-            <a href="#">Home</a>
+            <a href="aidanxworld.github.io">Home</a>
             <a href="#visors">Visors</a>
             <a href="#sleeves">Sleeves</a>
             <a href="#gloves">Gloves</a>
