--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Apparel</title>
     <link href="https://github.com/aidanxworld/aidanxworld.github.io/blob/main/AntonSC-Regular.ttf" rel="stylesheet">
-</head>
-       <style>
+    <style>
         body {
             font-family: 'AntonSC', sans-serif;
             margin: 0;
@@ -17,7 +16,11 @@
             background-color: #333;
             color: #fff;
             padding: 15px 0;
+            position: relative;
             text-align: center;
+        }
+        nav {
+            display: inline-block;
         }
         nav a {
             color: #fff;
@@ -30,6 +33,24 @@
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
+        }
+        .auth-buttons {
+            position: absolute;
+            top: 15px;
+            right: 20px;
+        }
+        .auth-buttons a {
+            background-color: #555;
+            color: #fff;
+            padding: 10px 15px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-left: 10px;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .auth-buttons a:hover {
+            background-color: #777;
         }
         .hero {
             background: url('giphy (1).gif') no-repeat center center/cover;
@@ -115,6 +136,7 @@
             margin: 0 10px;
         }
     </style>
+</head>
 <body>
     <header>
         <div class="logo">Football Apparel</div>
@@ -124,6 +146,10 @@
             <a href="#sleeves">Sleeves</a>
             <a href="#gloves">Gloves</a>
         </nav>
+        <div class="auth-buttons">
+            <a href="login.html">Login</a>
+            <a href="signup.html">Sign Up</a>
+        </div>
     </header>
 
     <section class="hero">
