--- a/privacy.html
+++ b/privacy.html
@@ -93,7 +93,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Football Apparel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
+        <p>&copy; 2024 Football Apparel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="tos.html">Terms of Service</a></p>
     </footer>
 </body>
 </html>
