--- a/signup.html
+++ b/signup.html
@@ -124,7 +124,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Football Apparel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2024 Football Apparel. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="tos.html">Terms of Service</a></p>
     </footer>
 </body>
 </html>
