--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Apparel</title>
-    <link href="https://github.com/aidanxworld/aidanxworld.github.io/blob/main/AntonSC-Regular.ttf" rel="stylesheet">
+    <link href="<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'AntonSC', sans-serif;
