--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'AntonSC', sans-serif;
+            font-family: 'Anton', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
