--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Apparel</title>
+    <title>Visors, Helmets, Jerseys and more | AStore</title>
     <link href="<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <style>
         body {
@@ -138,19 +138,21 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Football Apparel</div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#visors">Visors</a>
-            <a href="#sleeves">Sleeves</a>
-            <a href="#gloves">Gloves</a>
-        </nav>
-        <div class="auth-buttons">
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign Up</a>
-        </div>
-    </header>
+<header>
+    <div class="logo">
+        <img src="path/to/your/logo.png" alt="Football Apparel Logo">
+    </div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#visors">Visors</a>
+        <a href="#sleeves">Sleeves</a>
+        <a href="#gloves">Gloves</a>
+    </nav>
+    <div class="auth-buttons">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+    </div>
+</header>
 
     <section class="hero">
         <div>
