--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <body>
 <header>
     <div class="logo">
-        <img src="path/to/your/logo.png" alt="Football Apparel Logo">
+        <img src="ASTORE.png" alt="Football Apparel Logo">
     </div>
     <nav>
         <a href="#">Home</a>
