--- a/privacy.html
+++ b/privacy.html
@@ -70,15 +70,21 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Football Apparel</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#visors">Visors</a>
-            <a href="#sleeves">Sleeves</a>
-            <a href="#gloves">Gloves</a>
-        </nav>
-    </header>
+   <header>
+    <div class="logo">
+        <img src="ASTORE.png" alt="Football Apparel Logo">
+    </div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#visors">Visors</a>
+        <a href="#sleeves">Sleeves</a>
+        <a href="#gloves">Gloves</a>
+    </nav>
+    <div class="auth-buttons">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+    </div>
+</header>
 
     <div class="container">
         <h1>Privacy Policy</h1>
