--- a/signup.html
+++ b/signup.html
@@ -102,15 +102,21 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Football Apparel</div>
-        <nav>
-            <a href="aidanxworld.github.io">Home</a>
-            <a href="#visors">Visors</a>
-            <a href="#sleeves">Sleeves</a>
-            <a href="#gloves">Gloves</a>
-        </nav>
-    </header>
+   <header>
+    <div class="logo">
+        <img src="ASTORE.png" alt="Football Apparel Logo">
+    </div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#visors">Visors</a>
+        <a href="#sleeves">Sleeves</a>
+        <a href="#gloves">Gloves</a>
+    </nav>
+    <div class="auth-buttons">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+    </div>
+</header>
 
     <div class="signup-container">
         <h2>Create Account</h2>
